--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                               <img id="weatherImg" src="./assets/img/weather/cloudy-1-day.svg" alt="Soleil" />
                         </div>
                         <div class="topInfo">
-                              <h1 id="city">Votre Ville</h1>
+                              <h1 id="city">Simple weather app</h1>
                               <h3 id="description">Quel temps fait-il dehors ?</h3>
                         </div>
                         <div class="searchContainer">
