--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
                         </div>
                         <div class="topInfo">
                               <h1 id="city">Simple weather app</h1>
-                              <h3 id="description">Quel temps fait-il dehors ?</h3>
+                              <h3 id="description">What the weather is ?</h3>
                         </div>
                         <div class="searchContainer">
                               <div class="searchCity">
-                                    <input id="searchCityInput" type="text" placeholder="Rechercher ma ville..." />
+                                    <input id="searchCityInput" type="text" placeholder="City name..." />
                                     <label for="searchCityInput">Nom de ma ville...</label>
-                                    <p class="findBtn2">Rechercher</p>
+                                    <p class="findBtn2">Search</p>
                               </div>
                               <div class="autoFind">
-                                    <p class="findBtn">Trouver ma ville automatiquement (approximatif)</p>
+                                    <p class="findBtn">Auto find</p>
                               </div>
                         </div>
                         <div class="currentWeather">
                               <div class="weatherInfos">
                                     <div class="tempContainer">
                                           <h2 id="temp">0°</h2>
-                                          <p>ressenti</p>
+                                          <p>feels like ➤</p>
                                           <h2 id="ressenti">0°</h2>
                                     </div>
                               </div>
@@ -41,7 +41,7 @@
                   </div>
             </main>
             <footer>
-                  <p>Développé par <a href="http://tristan-viard.fr" target="_blank">Tritan VIARD</a></p>
+                  <p>By <a href="http://tristan-viard.fr" target="_blank">Tritan VIARD</a></p>
             </footer>
             <script src="./assets/JS/main.js"></script>
       </body>
