--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </div>
             </main>
             <footer>
-                  <p>By <a href="http://tristan-viard.fr" target="_blank">Tritan VIARD</a></p>
+                  <p>By <a href="http://tristan-viard.fr" target="_blank" rel="noopener">Tritan VIARD</a></p>
             </footer>
             <script src="./assets/JS/main.js"></script>
       </body>
